--- a/style.css
+++ b/style.css
@@ -22,12 +22,17 @@ body {
   font-family: "Karla", sans-serif;
   font-size: 16px;
   background-color: var(--Light-Gray);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
   width: 85%;
-  margin: 50px auto;
-  border-radius: 5px;
+  border-radius: 10px;
+  overflow: hidden;
   box-shadow: 0px 0px 30px -5px rgba(0, 0, 0, 0.3);
 }
 
@@ -36,8 +41,6 @@ main {
 .top {
   background-color: white;
   padding: 30px 25px;
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -62,6 +65,7 @@ main {
   color: var(--Light-Gray);
   display: flex;
   flex-direction: column;
+  flex-flow: column;
   gap: 20px;
   padding: 25px;
 }
@@ -75,23 +79,19 @@ main {
   margin: -10px 0 15px;
 }
 
-.price {
+.middle h1 {
   display: flex;
-  gap: 15px;
   align-items: center;
+  gap: 15px;
 }
 
-.price h1 {
-  font-size: 2em;
-  font-weight: 700;
-}
-
-.price h4 {
+.middle h1 span {
   opacity: 0.7;
   font-weight: 400;
+  font-size: 0.5em;
 }
 
-button {
+.middle button {
   background-color: var(--Bright-Yellow);
   color: var(--Light-Gray);
   border: none;
@@ -101,10 +101,13 @@ button {
   height: 50px;
   border-radius: 5px;
   box-shadow: 0px 0px 30px -5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
 }
 
-button:hover {
+.middle button:hover {
   opacity: 0.8;
+  transform: translateY(-1px);
 }
 
 /* bottom */
@@ -112,8 +115,6 @@ button:hover {
 .bottom {
   background-color: var(--Cyan);
   opacity: 0.75;
-  border-bottom-left-radius: inherit;
-  border-bottom-right-radius: inherit;
   color: var(--Light-Gray);
   display: flex;
   flex-direction: column;
@@ -139,16 +140,7 @@ button:hover {
 }
 
 @media screen and (min-width: 1040px) {
-  body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-  }
-
   main {
-    margin: 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border-radius: 10px;
@@ -157,8 +149,6 @@ button:hover {
   .top {
     grid-column: 1/3;
     font-size: larger;
-    border-top-left-radius: inherit;
-    border-top-right-radius: inherit;
     padding: 40px;
   }
 
@@ -167,13 +157,10 @@ button:hover {
   }
 
   .middle {
-    border-bottom-left-radius: inherit;
     padding: 40px;
   }
 
   .bottom {
-    border-bottom-left-radius: unset;
-    border-bottom-right-radius: inherit;
     padding: 40px;
   }
 }
